--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,6 @@
         "c:\\Users\\diak\\SulanAdam\\Library\\javafx-sdk-17.0.6\\lib\\javafx.media.jar",
         "c:\\Users\\diak\\SulanAdam\\Library\\javafx-sdk-17.0.6\\lib\\javafx.swing.jar",
         "c:\\Users\\diak\\SulanAdam\\Library\\javafx-sdk-17.0.6\\lib\\javafx.web.jar",
-        "c:\\Users\\diak\\SulanAdam\\Library\\javafx-sdk-17.0.6\\lib\\javafx-swt.jar",
-        "c:\\Users\\diak\\SulanAdam\\java\\inputlib.jar"
+        "c:\\Users\\diak\\SulanAdam\\Library\\javafx-sdk-17.0.6\\lib\\javafx-swt.jar"
     ]
 }
